--- a/app/index.html
+++ b/app/index.html
@@ -466,16 +466,16 @@
               <div class="promo__text">Days</div>
             </div>
             <div class="promo__clock-item">
-                <span class="promo__hours"></span>
-                <div class="promo__text">Hours</div>
+              <span class="promo__hours"></span>
+              <div class="promo__text">Hours</div>
             </div>
             <div class="promo__clock-item">
-                <span class="promo__minutes"></span>
-                <div class="promo__text">Minutes</div>
+              <span class="promo__minutes"></span>
+              <div class="promo__text">Minutes</div>
             </div>
             <div class="promo__clock-item">
-                <span class="promo__seconds"></span>
-                <div class="promo__text">Seconds</div>
+              <span class="promo__seconds"></span>
+              <div class="promo__text">Seconds</div>
             </div>
           </div>
           <a class="promo__link" href="#">
@@ -497,6 +497,89 @@
       </div>
     </div>
 
+
+    <section class="blog">
+      <div class="container">
+        <h3 class="title">
+          From Our Blog
+        </h3>
+        <p class="text">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmodmoe tempor incididunt ut labore et
+          dolore aliqua.
+        </p>
+        <div class="blog__items">
+          <div class="blog__item">
+            <a class="blog__item-imglink" href="#">
+              <img src="images/blog/1.jpg" alt="blog img">
+            </a>
+            <div class="blog__item-box">
+              <div class="blog__item-info">
+                <a class="blog__item-author" href="#">
+                  By Admin
+                </a>
+                <div class="blog__item-date">
+                  0 January, 2020
+                </div>
+              </div>
+              <a class="blog__item-titlelink" href="#">
+                <h4 class="blog__item-title">
+                  Our Apps User Use Mobile On His Mobile
+                </h4>
+              </a>
+              <a class="blog__item-link" href="#">
+                Read More
+              </a>
+            </div>
+          </div>
+          <div class="blog__item">
+            <a class="blog__item-imglink" href="#">
+              <img src="images/blog/2.jpg" alt="blog img">
+            </a>
+            <div class="blog__item-box">
+              <div class="blog__item-info">
+                <a class="blog__item-author" href="#">
+                  By Admin
+                </a>
+                <div class="blog__item-date">
+                  0 January, 2020
+                </div>
+              </div>
+              <a class="blog__item-titlelink" href="#">
+                <h4 class="blog__item-title">
+                  Our Apps User Use Mobile On His Mobile
+                </h4>
+              </a>
+              <a class="blog__item-link" href="#">
+                Read More
+              </a>
+            </div>
+          </div>
+          <div class="blog__item">
+            <a class="blog__item-imglink" href="#">
+              <img src="images/blog/3.jpg" alt="blog img">
+            </a>
+            <div class="blog__item-box">
+              <div class="blog__item-info">
+                <a class="blog__item-author" href="#">
+                  By Admin
+                </a>
+                <div class="blog__item-date">
+                  0 January, 2020
+                </div>
+              </div>
+              <a class="blog__item-titlelink" href="#">
+                <h4 class="blog__item-title">
+                  Our Apps User Use Mobile On His Mobile
+                </h4>
+              </a>
+              <a class="blog__item-link" href="#">
+                Read More
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
 
 
