added login page

--- a/app/index.html
+++ b/app/index.html
@@ -204,7 +204,7 @@
       <div class="container">
         <div class="video-fashion__inner">
           <div class="video-fashion__popup" style="background-image: url('images/video-fashion.jpg');">
-            <a class="video-fashion__play" data-fancybox href="https://www.youtube.com/watch?v=tb2Kp6kAx5o">
+            <a class="video-fashion__play" data-fancybox href="https://www.youtube.com/watch?v=75TLVk_yxS4">
               <img src="images/icons/play-btn.svg" alt="video paly button">
             </a>
           </div>
