--- a/app/index.html
+++ b/app/index.html
@@ -266,13 +266,23 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="3"></div>
-            <h4 class="product-item__title">
-              White Polo Men’s T-Shirt
-            </h4>
-            <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+            <div class="product-item__wrapper-box">
+              <div class="product-item__box">
+                <div class="star" data-rateyo-rating="3"></div>
+                <h4 class="product-item__title">
+                  White Polo Men’s T-Shirt
+                </h4>
+                <div class="product-item__price">
+                  <div class="product-item__new-price">$34.00</div>
+                  <div class="product-item__old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product-item__content-box">
+                <p class="product-item__text">
+                  Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod utlitoi labore et dolore magna aliqua.
+                </p>
+                <button class="product-item__btn">Add to cart</button>
+              </div>
             </div>
           </div>
 
@@ -300,13 +310,23 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="3.5"></div>
-            <h4 class="product-item__title">
-              White Polo Men’s T-Shirt
-            </h4>
-            <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+            <div class="product-item__wrapper-box">
+              <div class="product-item__box">
+                <div class="star" data-rateyo-rating="3.5"></div>
+                <h4 class="product-item__title">
+                  White Polo Men’s T-Shirt
+                </h4>
+                <div class="product-item__price">
+                  <div class="product-item__new-price">$34.00</div>
+                  <div class="product-item__old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product-item__content-box">
+                <p class="product-item__text">
+                  Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod utlitoi labore et dolore magna aliqua.
+                </p>
+                <button class="product-item__btn">Add to cart</button>
+              </div>
             </div>
           </div>
 
@@ -334,15 +354,26 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="3.8"></div>
-            <h4 class="product-item__title">
-              White Polo Men’s T-Shirt
-            </h4>
-            <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+            <div class="product-item__wrapper-box">
+              <div class="product-item__box">
+                <div class="star" data-rateyo-rating="3.8"></div>
+                <h4 class="product-item__title">
+                  White Polo Men’s T-Shirt
+                </h4>
+                <div class="product-item__price">
+                  <div class="product-item__new-price">$34.00</div>
+                  <div class="product-item__old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product-item__content-box">
+                <p class="product-item__text">
+                  Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod utlitoi labore et dolore magna aliqua.
+                </p>
+                <button class="product-item__btn">Add to cart</button>
+              </div>
             </div>
           </div>
+
 
           <div class="product-item product-item--sale">
             <div class="product-item__img-box">
@@ -368,15 +399,26 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="4"></div>
-            <h4 class="product-item__title">
-              White Polo Men’s T-Shirt
-            </h4>
-            <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+            <div class="product-item__wrapper-box">
+              <div class="product-item__box">
+                <div class="star" data-rateyo-rating="4"></div>
+                <h4 class="product-item__title">
+                  White Polo Men’s T-Shirt
+                </h4>
+                <div class="product-item__price">
+                  <div class="product-item__new-price">$34.00</div>
+                  <div class="product-item__old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product-item__content-box">
+                <p class="product-item__text">
+                  Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod utlitoi labore et dolore magna aliqua.
+                </p>
+                <button class="product-item__btn">Add to cart</button>
+              </div>
             </div>
           </div>
+
 
           <div class="product-item">
             <div class="product-item__img-box">
@@ -402,15 +444,26 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="4.5"></div>
-            <h4 class="product-item__title">
-              White Polo Men’s T-Shirt
-            </h4>
-            <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+            <div class="product-item__wrapper-box">
+              <div class="product-item__box">
+                <div class="star" data-rateyo-rating="4.5"></div>
+                <h4 class="product-item__title">
+                  White Polo Men’s T-Shirt
+                </h4>
+                <div class="product-item__price">
+                  <div class="product-item__new-price">$34.00</div>
+                  <div class="product-item__old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product-item__content-box">
+                <p class="product-item__text">
+                  Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod utlitoi labore et dolore magna aliqua.
+                </p>
+                <button class="product-item__btn">Add to cart</button>
+              </div>
             </div>
           </div>
+
 
           <div class="product-item product-item--sale">
             <div class="product-item__img-box">
@@ -436,18 +489,29 @@
                 </a>
               </div>
             </div>
-            <div class="star" data-rateyo-rating="5"></div>
-            <h4 class="product-item__title">
-              White Polo Men’s T-Shirt
-            </h4>
-            <div class="product-item__price">
-              <div class="product-item__new-price">$34.00</div>
-              <div class="product-item__old-price">$27.00</div>
+            <div class="product-item__wrapper-box">
+              <div class="product-item__box">
+                <div class="star" data-rateyo-rating="5"></div>
+                <h4 class="product-item__title">
+                  White Polo Men’s T-Shirt
+                </h4>
+                <div class="product-item__price">
+                  <div class="product-item__new-price">$34.00</div>
+                  <div class="product-item__old-price">$27.00</div>
+                </div>
+              </div>
+              <div class="product-item__content-box">
+                <p class="product-item__text">
+                  Lorem ipsum dolor sit amet, adipiscing elit, sed de eusmod utlitoi labore et dolore magna aliqua.
+                </p>
+                <button class="product-item__btn">Add to cart</button>
+              </div>
             </div>
           </div>
-
         </div>
-        <a class="product__link" href="#">LOAD MORE</a>
+
+      </div>
+      <a class="product__link" href="#">LOAD MORE</a>
       </div>
     </section>
 
